--- a/public/styles/site/_index.scss
+++ b/public/styles/site/_index.scss
@@ -82,6 +82,7 @@
 		font-size: 1.2em;
 		letter-spacing: 3px;
 		text-decoration: none;
+		z-index: 1;
 	  }
 	}
   }
